[B][COLOR green]v 1.0.13 (Friday, 26 December, 2016)[/COLOR][/B]
-- [COLOR yellow][B]fixes[/COLOR][/B] fix for simple trigger change.

[B][COLOR green]v 1.0.12 (Friday, 24 December, 2016)[/COLOR][/B]
-- [COLOR yellow][B]fixes[/COLOR][/B] added debug mode under settings. Fix for links, all live sports will auto default to "let me choose" quality option.  Everything else should play with quality selected under addon settings.

[B][COLOR green]v 1.0.11 (Friday, sometime october, 2016)[/COLOR][/B]
-- [COLOR yellow][B]fixes[/COLOR][/B] fix for live sports.


[B][COLOR green]v 1.0.10 (Friday, 29 July, 2016)[/COLOR][/B]
-- [COLOR yellow][B]fixes[/COLOR][/B] fix for search and added channels category.


[B][COLOR green]V 1.0.9 (Saturday 21 June, 2016)[/COLOR][/B]
-- [COLOR yellow][B]fixes[/COLOR][/B] fix for tvshows.


[B][COLOR green]V 1.0.8 (Saturday 27 May, 2016)[/COLOR][/B]
-- [COLOR yellow][B]fixes[/COLOR][/B] Added 720p links for live sports streaming(if available - need to use let me choose option), and fixed subtitles integration with 3rd party services.

[B][COLOR green]V 1.0.7 (Saturday 26 March, 2016)[/COLOR][/B]
-- [COLOR yellow][B]ipaddress fix[/COLOR][/B] Fixed ipaddress dependency.  Also fixed movie collections video links.


[B][COLOR green]V 1.0.6 (Friday 26 February, 2016)[/COLOR][/B]
-- [COLOR yellow][B]TV shows fix[/COLOR][/B] Fixed changes for website, missing TV shows should pull up.  added verify=False for requests

[B][COLOR green]V 1.0.5 (Thursday 17 December, 2015)[/COLOR][/B]
-- [COLOR yellow][B]website changes fix[/COLOR][/B] Fixed changes for website, sports should work again.

[B][COLOR green]V 1.0.4 (Thursday 15 October, 2015)[/COLOR][/B]
-- [COLOR yellow][B]Directory fixes[/COLOR][/B] Fixed next page error, and TV shows structure.

[B][COLOR green]V 1.0.3 (Saturday 10 October, 2015)[/COLOR][/B]